# pfSense-Auditor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
pfsense_auditor/: __init__.py  checks.py  cli.py  models.py  parser.py  profiles.py  report.py  suppressions.py
tests/: test_checks.py
tests/fixtures/: sample-allowlist.yaml  sample_config.xml
