[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pfsense-auditor"
version = "0.1.0"
description = "Offline security auditor for pfSense config.xml backups"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Scott Smith" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "click>=8.1",
    "lxml>=4.9",
]

[project.scripts]
pfsense-audit = "pfsense_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pfsense_auditor*"]
